--- a/.github/workflows/daily-crypto-analysis.yml
+++ b/.github/workflows/daily-crypto-analysis.yml
@@ -20,17 +20,31 @@ jobs:
         fetch-depth: 0
 
     - name: Setup Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.11'
+        cache: 'pip'
+
+    - name: Cache Python dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r scripts/requirements.txt
 
+    - name: Check Python syntax
+      run: |
+        echo "🔍 检查Python语法..."
+        python scripts/check-syntax.py
+
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
+      uses: peaceiris/actions-hugo@v3
       with:
         hugo-version: 'latest'
         extended: true
@@ -41,8 +55,11 @@ jobs:
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
     - name: Run crypto project analyzer
+      id: analyzer
+      continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_ACTIONS: true
       run: |
         cd ${{ github.workspace }}
         python scripts/crypto-project-analyzer.py
@@ -57,17 +74,17 @@ jobs:
     - name: Build Hugo site
       if: steps.check_articles.outputs.new_articles > 0
       run: |
-        hugo --cleanDestinationDir
+        hugo --cleanDestinationDir --minify
 
     - name: Commit and push changes
       if: steps.check_articles.outputs.new_articles > 0
       run: |
         git add .
-        if git diff --staged --quiet; then
-          echo "No changes to commit"
-        else
-          git commit -m "Auto-generated: Daily crypto project reviews for $(date +%Y-%m-%d)" || exit 0
+        if ! git diff --staged --quiet; then
+          git commit -m "🤖 Auto: Daily crypto analysis $(date +%Y-%m-%d) - ${{ steps.check_articles.outputs.new_articles }} articles"
           git push
+        else
+          echo "No changes to commit"
         fi
 
     - name: Create summary
@@ -76,10 +93,19 @@ jobs:
         echo "## 📊 Daily Crypto Analysis Summary" >> $GITHUB_STEP_SUMMARY
         echo "- **Date**: $(date +%Y-%m-%d)" >> $GITHUB_STEP_SUMMARY
         echo "- **New Articles**: ${{ steps.check_articles.outputs.new_articles }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Analyzer Status**: ${{ steps.analyzer.outcome }}" >> $GITHUB_STEP_SUMMARY
+        echo "- **Overall Status**: ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
+        
         if [ "${{ steps.check_articles.outputs.new_articles }}" -gt 0 ]; then
-          echo "- **Status**: ✅ Successfully generated and published" >> $GITHUB_STEP_SUMMARY
-          echo "### Generated Articles:" >> $GITHUB_STEP_SUMMARY
+          echo "- **Result**: ✅ Successfully generated and published" >> $GITHUB_STEP_SUMMARY
+          echo "### 📄 Generated Articles:" >> $GITHUB_STEP_SUMMARY
           find content/posts -name "*$(date +%Y-%m-%d)*" -type f -exec basename {} \; | sed 's/^/- /' >> $GITHUB_STEP_SUMMARY
         else
-          echo "- **Status**: ℹ️ No new articles generated today" >> $GITHUB_STEP_SUMMARY
+          echo "- **Result**: ℹ️ No new articles generated today" >> $GITHUB_STEP_SUMMARY
+        fi
+        
+        # 显示历史统计
+        if [ -f "data/analyzed_projects.json" ]; then
+          TOTAL_PROJECTS=$(python3 -c "import json; print(json.load(open('data/analyzed_projects.json'))['total_projects'])" 2>/dev/null || echo "0")
+          echo "- **Total Analyzed Projects**: $TOTAL_PROJECTS" >> $GITHUB_STEP_SUMMARY
         fi
