--- a/.github/workflows/manual-crypto-analysis.yml
+++ b/.github/workflows/manual-crypto-analysis.yml
@@ -28,17 +28,31 @@ jobs:
         fetch-depth: 0
 
     - name: Setup Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.11'
+        cache: 'pip'
+
+    - name: Cache Python dependencies
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
 
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r scripts/requirements.txt
 
+    - name: Check Python syntax
+      run: |
+        echo "🔍 检查Python语法..."
+        python scripts/check-syntax.py
+
     - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
+      uses: peaceiris/actions-hugo@v3
       with:
         hugo-version: 'latest'
         extended: true
@@ -49,8 +63,11 @@ jobs:
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
     - name: Run crypto project analyzer
+      id: analyzer
+      continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_ACTIONS: true
         DAYS_BACK: ${{ github.event.inputs.days_back || '7' }}
         MAX_PROJECTS: ${{ github.event.inputs.max_projects || '3' }}
       run: |
@@ -66,7 +83,7 @@ jobs:
     - name: Build Hugo site
       run: |
         echo "🏗️ 构建Hugo网站..."
-        hugo --cleanDestinationDir
+        hugo --cleanDestinationDir --minify
 
     - name: Commit and push changes
       run: |
@@ -92,6 +109,8 @@ jobs:
         NEW_ARTICLES=$(find content/posts -name "*$(date +%Y-%m-%d)*" -type f | wc -l)
         echo "- **Generated Articles**: $NEW_ARTICLES" >> $GITHUB_STEP_SUMMARY
         
+        echo "- **Analyzer Status**: ${{ steps.analyzer.outcome }}" >> $GITHUB_STEP_SUMMARY
+        
         if [ "$NEW_ARTICLES" -gt 0 ]; then
           echo "### 📄 Generated Articles:" >> $GITHUB_STEP_SUMMARY
           find content/posts -name "*$(date +%Y-%m-%d)*" -type f -exec basename {} \; | sed 's/^/- /' >> $GITHUB_STEP_SUMMARY
@@ -100,3 +119,9 @@ jobs:
         echo "### 📊 Repository Stats:" >> $GITHUB_STEP_SUMMARY
         echo "- **Total Posts**: $(find content/posts -name "*.md" | wc -l)" >> $GITHUB_STEP_SUMMARY
         echo "- **Recent Posts**: $(find content/posts -name "*.md" -mtime -7 | wc -l) (last 7 days)" >> $GITHUB_STEP_SUMMARY
+        
+        # 显示历史统计
+        if [ -f "data/analyzed_projects.json" ]; then
+          TOTAL_PROJECTS=$(python3 -c "import json; print(json.load(open('data/analyzed_projects.json'))['total_projects'])" 2>/dev/null || echo "0")
+          echo "- **Total Analyzed Projects**: $TOTAL_PROJECTS" >> $GITHUB_STEP_SUMMARY
+        fi
