Fix Vercel deployment: ensure index.html is served at root
- Add vercel.json with proper routing configuration
- Rename RSS feed from index.xml to feed.xml to avoid conflicts
- Add _redirects file for RSS feed aliases
- Add .htaccess for additional server configuration
- Update Hugo output format configuration
- Ensure proper MIME types for XML files

--- a/hugo.toml
+++ b/hugo.toml
@@ -124,3 +124,16 @@ enableEmoji = true
 # 输出格式
 [outputs]
   home = ["HTML", "RSS", "JSON"]
+
+# 媒体类型配置
+[mediaTypes]
+  [mediaTypes."application/rss+xml"]
+    suffixes = ["xml"]
+
+# 输出格式配置
+[outputFormats]
+  [outputFormats.RSS]
+    mediaType = "application/rss+xml"
+    baseName = "feed"
+    isPlainText = false
+    notAlternative = false
