完全移除RSS功能：彻底解决首页显示RSS问题
✅ 移除的RSS相关功能：
- 删除RSS重定向规则（_redirects和.htaccess）
- 禁用Hugo配置中的RSS输出格式
- 关闭RSS按钮显示设置
- 移除RSS媒体类型和输出格式配置
- 删除RSS样式表文件（static/rss.xsl）
- 删除自定义RSS模板（layouts/_default/rss.xml）
- 清理生成的RSS feed文件

✅ 保留的核心功能：
- 网站首页和所有页面正常显示
- 完整的博客功能和文章系统
- JSON输出格式（用于搜索功能）
- SEO和导航功能完全保留
- 所有原有功能100%不受影响

🎯 解决问题：确保用户访问域名时显示正确的博客首页，而非RSS页面

--- a/hugo.toml
+++ b/hugo.toml
@@ -75,7 +75,7 @@ enableEmoji = true
   ShowBreadCrumbs = true
   ShowCodeCopyButtons = true
   ShowWordCount = true
-  ShowRssButtonInSectionTermList = true
+  ShowRssButtonInSectionTermList = false
   UseHugoToc = true
   disableSpecial1stPost = false
   disableScrollToTop = false
@@ -123,17 +123,6 @@ enableEmoji = true
 
 # 输出格式
 [outputs]
-  home = ["HTML", "RSS", "JSON"]
+  home = ["HTML", "JSON"]
 
-# 媒体类型配置
-[mediaTypes]
-  [mediaTypes."application/rss+xml"]
-    suffixes = ["xml"]
-
-# 输出格式配置
-[outputFormats]
-  [outputFormats.RSS]
-    mediaType = "application/rss+xml"
-    baseName = "feed"
-    isPlainText = false
-    notAlternative = false
+# 输出格式配置已简化，移除RSS相关配置
